[package]
name = "sqliteProfiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled", "trace", "modern_sqlite"] }
fake = { version = "2.4", features = ['derive'] }
log = "0.4.8"
flexi_logger = "0.22"
structopt = "0.3"
